app/assets/stylesheets/pages/_show.scss
/* Reviews */

.reviews-list {
  padding-left: 0;
}

#reviews-list > li {
  transition: opacity 1s ease;
  list-style: none;
}

.fade_in {
  opacity: 0;
  transition: opacity 1s ease-in;
}


/* sidebar ingredients list*/
.item-a {
  grid-area: ingredients;
  height: 100vh;
  padding: 16px;
  line-height: 32px;
  overflow: scroll;
  ul {
    // position: sticky;
    // top: 210px;
  }

  li {
  list-style: none;
  line-height: 2;
  }
}

/* Header with title,preptime,cooking time, servings*/
.item-b {
  grid-area: header;
  margin-left: 10px;
  margin-right: 10px;
  // min-height: 230px;
  .leave-review-link {
    color: lightgreen;
    &:hover {
      color: $green;
    }
  }
}


/* List of steps*/
.item-c {
  grid-area: steps;
  // height: 50vh;
  margin: 13px;
  margin-left: 10px;
  margin-right: 10px;
  overflow: scroll;
}

.item-c p {
  font-size: 18px;
}
.item-d {
  grid-area: reviews;
  text-align: center;
  height: 50vh;
  margin-left: 10px;
  margin-right: 10px;
  // overflow: scroll;
}
.page-container {
  width: 95vw;
  display: grid;
  grid-column-gap: 24px;
  grid-row-gap: 24px;
  grid-template-columns: 28% 72%;
  grid-column-start: 2;
  margin-top: 2rem;
  // grid-template-rows: 1fr 1fr 1fr;
  grid-template-areas:
  "ingredients header"
  "ingredients steps"
  "ingredients reviews";
}

.sidenav {
  position: fixed;
  overflow-y: scroll;
  top: 60px;
  width: 270px;
}

// .item-b {
  //   &.recipe-image {
    //     max-height:100%;
    //     max-width:100%;
    //     position: relative;
    
.start-cooking { 
  margin: 56px 0 0 0;
  // text-align: center; 
}

.add-to-groc-button {
  margin: 55px 0px 35px 0px;
  text-align: center;
}

#ingredients-list {
  list-style: none;
  padding: 0;
}

.ingredient-red, .ingredient-green, .ingredient-orange {
  padding-left: 10px;
}

// Mobile

.mobile-item-b {
  grid-area: header;
  // margin-left: 10px;
  margin-right: 10px;
  width: 100%;
  .mobile-header-container {
    min-height: 260px;
    padding: 16px;
  }
}
 
.mobile-review-link {
  color: lightgreen;
  &hover {
    color: $green;
  }
}

.start-cooking-mobile{
  width: 86vw;
  margin-right: auto;
  margin-left: auto;
  margin-top: 24px;
  // margin-left: 20px;
}

// .mobile-cta{
  //   display: flex;
  //   justify-content: center;
  //   align-items: center;
//   margin: 30px 0;
// }

.ingredients-start-button {
  // display: flex;
  // margin: 24px 0 8px 28px;
  width: 85vw;
  margin-left: auto;
  margin-right: auto;
}

#title {
  margin: 23px 0 15px -10px;
  // padding: 12px;
  font-size: 24px;
  // position: sticky;
  text-align: center;
} 

#ingredient-title {
  margin: 12px 0 8px 5px;
  font-size: 16px;
  // position: sticky;
  top: 170px;
  text-align: center;
}

.mobile-only {
  display: none;
}

.mobile-container {
  // margin-top: 50px;
  color: white;
  h2 {
    color: white;
  }
}


.collapsed-grocery-button {
  text-align: center;
  margin-top: 24px;
  margin-bottom: -16px;
}

@media (max-width: 1000px) {
  /* For a screen < 960px, this CSS will be read */
  .start-cooking {
    position: initial;
  }

  .mobile-only { display: initial; }
  .desktop-only { display: none; }
}
@media (max-width: 720px) {
  /* For a screen < 720px, this CSS will be read */
  .start-cooking {
    position: initial;
  }
  .mobile-only { display: initial; }
  .desktop-only { display: none; }
}
@media (max-width: 540px) {
  /* For a screen < 540px, this CSS will be read */
  .mobile-only { display: initial; }
  .desktop-only { display: none; }
}

